--- a/exchangeRate.html
+++ b/exchangeRate.html
@@ -19,9 +19,9 @@
                         <div class="exchange">
                             <h6 class="text-center" id="amount">Amount:</h6> <br><br>
                            <h5> From</h6> 
-                            <h6 id="naira">Nigeria Naira: <input type="number" id="naira"></h6><br><br>
+                            <h6>Nigeria Naira: <input type="number" id="naira"></h6><br><br>
                             <h5>To</h5>
-                            <h6 id="dollar">US Dollars: <input type="number" id="dollar"></h6>
+                            <h6>US Dollars: <input type="number" id="dollar"></h6>
                            <button id="button">Calculate</button>
                         </div>
                     </div>
