--- a/login.html
+++ b/login.html
@@ -60,14 +60,18 @@
       <div class="col-md-4">
         <div class="card shadow people">
           <div class="card-body">
-            <img src="./images/people1.jpg" alt="" class="img-fluid">
+            <img src="./images/people1.jpg" alt="" class="img-fluid" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2000">
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card shadow people" id="people">
+        <div class="card shadow people">
           <div class="card-body">
-            <img src="./images/people2.jpg" alt="" class="img-fluid">
+            <img src="./images/people2.jpg" alt="" class="img-fluid" data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
           </div>
           <h2 id="demo"></h2>
         </div>
@@ -75,7 +79,10 @@
       <div class="col-md-4">
         <div class="card shadow people">
           <div class="card-body">
-            <img src="./images/people3.jpg" alt="" class="img-fluid">
+            <img src="./images/people3.jpg" alt="" class="img-fluid" data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="300"
+            data-aos-duration="500">
           </div>
           <h2 id="demo"></h2>
         </div>
@@ -83,7 +90,8 @@
       <div class="col-md-4">
         <div class="card shadow environ">
           <div class="card-body">
-            <img src="./images/environ1.jpg" alt="" class="img-fluid">
+            <img src="./images/environ1.jpg" alt="" class="img-fluid" data-aos="fade-up"
+            data-aos-anchor-placement="bottom-bottom">
           </div>
           <h2 id="demo"></h2>
         </div>
@@ -91,14 +99,18 @@
       <div class="col-md-4">
         <div class="card shadow environ gy-4">
           <div class="card-body">
-            <img src="./images/environ2.jpg" alt="" class="img-fluid">
+            <img src="./images/environ2.jpg" alt="" class="img-fluid" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2000">
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card shadow environ">
           <div class="card-body">
-            <img src="./images/environ3.jpg" alt="" class="img-fluid">
+            <img src="./images/environ3.jpg" alt="" class="img-fluid" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2000">
           </div>
         </div>
       </div>
@@ -119,7 +131,10 @@
       <div class="col-md-4">
         <div class="card shadow drama">
           <div class="card-body">
-            <img src="./images/drama3.jpg" alt="" class="img-fluid">
+            <img src="./images/drama3.jpg" alt="" class="img-fluid" data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0">
           </div>
         </div>
       </div>
@@ -133,14 +148,20 @@
       <div class="col-md-4">
         <div class="card shadow food">
           <div class="card-body">
-            <img src="./images/food2.jpg" alt="" class="img-fluid">
+            <img src="./images/food2.jpg" alt="" class="img-fluid" data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="500"
+            data-aos-duration="500">
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card shadow food">
           <div class="card-body">
-            <img src="./images/food3.jpg" alt="" class="img-fluid">
+            <img src="./images/food3.jpg" alt="" class="img-fluid" data-aos="fade-right"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="500"
+            data-aos-duration="500">
           </div>
         </div>
       </div>
@@ -151,5 +172,9 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script>
+      AOS.init();
+    </script>
+
 </body>
 </html>
